# libspectacles

./: .gitignore  CMakeLists.txt  README.md
include/: spectacles.h
include/brokers/: AmqpBroker.h  Broker.h  amqp.h  consumer.h  producer.h
include/gateway/: Manager.h  Shard.h
src/: CMakeLists.txt
src/brokers/: AmqpBroker.cpp  Broker.cpp  amqp.cpp  consumer.cpp  producer.cpp
src/gateway/: Manager.cpp
